agrego funcion verificar solucion np

--- a/TP3/TP3.ipynb
+++ b/TP3/TP3.ipynb
@@ -11,6 +11,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### ¿Hitting-Set Problem está en NP?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Verificamos la solucion polinomialmente\n",
+    "def verificar_solucion(B, C):\n",
+    "    satisface_Bi = [False * len(B)]\n",
+    "\n",
+    "    for c in C:                      # O(#C) \n",
+    "        for i in range(len(B)):\n",
+    "            if c in B[i]:            # O(#B[i])\n",
+    "                satisface_Bi[i] = True\n",
+    "\n",
+    "    return all(satisface_Bi)      # O(#B)         "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Funciones auxiliares\n"
    ]
   },
