agrego funcion verificar solucion np

--- a/TP3/TP3.ipynb
+++ b/TP3/TP3.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "#Verificamos la solucion polinomialmente\n",
     "def verificar_solucion(B, C):\n",
-    "    satisface_Bi = [False * len(B)]\n",
+    "    satisface_Bi = [False] * len(B)\n",
     "\n",
     "    for c in C:                      # O(#C) \n",
     "        for i in range(len(B)):\n",
