Elección de función para leer archivo

--- a/TP3/TP3.ipynb
+++ b/TP3/TP3.ipynb
@@ -41,9 +41,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sets:\n",
+      "[\"Barcon't\", 'Cuti Romero', 'Colidio', 'Casco']\n",
+      "['Colo Barco', 'Wachoffisde Abila', 'Messi', 'Casco', 'Armani', 'Chiquito Romero']\n",
+      "[\"Barcon't\", 'Wachoffisde Abila', 'Colidio', 'Casco']\n",
+      "['Messi', 'Cuti Romero', 'Casco', 'Pezzella']\n",
+      "['Colo Barco', 'Messi', 'Cuti Romero']\n",
+      "\n",
+      "Nombres:\n",
+      "['Armani', 'Messi', 'Pezzella', \"Barcon't\", 'Colo Barco', 'Cuti Romero', 'Casco', 'Wachoffisde Abila', 'Colidio', 'Chiquito Romero']\n"
+     ]
+    }
+   ],
    "source": [
     "# Recibe el path con el archivo a leer.\n",
     "# Leemos y devolvemos dos arrays. \n",
@@ -58,50 +74,11 @@
     "    preseleccion = set()\n",
     "\n",
     "    for linea in lineas:\n",
-    "        # Eliminar saltos de línea y dividir la línea en preseleccion\n",
     "        preseleccion_linea = linea.strip().split(',')\n",
-    "\n",
-    "        # Agregar la lista de preseleccion a 'pedidos_de_la_prensa'\n",
     "        pedidos_de_la_prensa.append(preseleccion_linea)\n",
-    "\n",
-    "        # Agregar cada nombre individual a 'preseleccion' si no existe previamente\n",
     "        preseleccion.update(set(preseleccion_linea))\n",
     "\n",
-    "    return pedidos_de_la_prensa, list(preseleccion)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Recibe el path con el archivo a leer.\n",
-    "# Leemos y devolvemos dos arrays. \n",
-    "# - El primero corresponde a un array de listas, donde cada lista posee los jugadores que piden los diferentes medios y periodistas.\n",
-    "# - El segundo array posee todos los jugadores que aparecen en el array anterior, siendo los jugadores que Scaloni puede elegir, su preselección.\n",
-    "# Este algoritmo, devuelve una preselección en orden a medida que aparecen los jugadores en el archivo.\n",
-    "def leer_archivo(path):\n",
-    "    with open(path, 'r') as archivo:\n",
-    "        lineas = archivo.readlines()\n",
-    "\n",
-    "    pedidos_de_la_prensa = []\n",
-    "    preseleccion = []\n",
-    "\n",
-    "    for linea in lineas:\n",
-    "        # Eliminar saltos de línea y dividir la línea en preseleccion\n",
-    "        preseleccion_linea = linea.strip().split(',')\n",
-    "\n",
-    "        # Agregar la lista de preseleccion a 'pedidos_de_la_prensa'\n",
-    "        pedidos_de_la_prensa.append(preseleccion_linea)\n",
-    "\n",
-    "        # Agregar cada nombre individual a 'preseleccion' si no existe previamente\n",
-    "        for nombre in preseleccion_linea:\n",
-    "            if nombre not in preseleccion:\n",
-    "                preseleccion.append(nombre)\n",
-    "\n",
-    "    return pedidos_de_la_prensa, preseleccion\n"
+    "    return pedidos_de_la_prensa, list(preseleccion)\n"
    ]
   },
   {
@@ -129,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +116,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\tobia\\TDA-I-Fiuba\\TP3\\TP3.ipynb Cell 6\u001b[0m line \u001b[0;36m2\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/tobia/TDA-I-Fiuba/TP3/TP3.ipynb#W5sZmlsZQ%3D%3D?line=24'>25</a>\u001b[0m \u001b[39m# Acceder a los datos almacenados en las estructuras\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/tobia/TDA-I-Fiuba/TP3/TP3.ipynb#W5sZmlsZQ%3D%3D?line=25'>26</a>\u001b[0m \u001b[39mfor\u001b[39;00m resultado \u001b[39min\u001b[39;00m resultados:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/tobia/TDA-I-Fiuba/TP3/TP3.ipynb#W5sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mCantidad mínima:\u001b[39m\u001b[39m\"\u001b[39m, resultado\u001b[39m.\u001b[39;49mcantidad_minima)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/tobia/TDA-I-Fiuba/TP3/TP3.ipynb#W5sZmlsZQ%3D%3D?line=27'>28</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mJugadores:\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39m, \u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mjoin(resultado\u001b[39m.\u001b[39mjugadores))\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/tobia/TDA-I-Fiuba/TP3/TP3.ipynb#W5sZmlsZQ%3D%3D?line=28'>29</a>\u001b[0m     \u001b[39mprint\u001b[39m()\n",
+      "\u001b[1;32mc:\\Users\\tobia\\TDA-I-Fiuba\\TP3\\TP3.ipynb Cell 7\u001b[0m line \u001b[0;36m2\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/tobia/TDA-I-Fiuba/TP3/TP3.ipynb#X10sZmlsZQ%3D%3D?line=24'>25</a>\u001b[0m \u001b[39m# Acceder a los datos almacenados en las estructuras\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/tobia/TDA-I-Fiuba/TP3/TP3.ipynb#X10sZmlsZQ%3D%3D?line=25'>26</a>\u001b[0m \u001b[39mfor\u001b[39;00m resultado \u001b[39min\u001b[39;00m resultados:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/tobia/TDA-I-Fiuba/TP3/TP3.ipynb#X10sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mCantidad mínima:\u001b[39m\u001b[39m\"\u001b[39m, resultado\u001b[39m.\u001b[39;49mcantidad_minima)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/tobia/TDA-I-Fiuba/TP3/TP3.ipynb#X10sZmlsZQ%3D%3D?line=27'>28</a>\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mJugadores:\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39m, \u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mjoin(resultado\u001b[39m.\u001b[39mjugadores))\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/tobia/TDA-I-Fiuba/TP3/TP3.ipynb#X10sZmlsZQ%3D%3D?line=28'>29</a>\u001b[0m     \u001b[39mprint\u001b[39m()\n",
       "\u001b[1;31mAttributeError\u001b[0m: 'list' object has no attribute 'cantidad_minima'"
      ]
     }
