Funcion Verificadora de nuestro problema

--- a/TP3/TP3.ipynb
+++ b/TP3/TP3.ipynb
@@ -130,6 +130,37 @@
     "\n",
     "        return resultados\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Función verificadora"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Tomamos como base la verificación del Hitting-Set Problem. Y lo ajustamos para nuestro problema.\n",
+    "def verificar_solucion_para_Scaloni(B, C):\n",
+    "    cantidad_de_jugadores = len(C)\n",
+    "    max_jugadores = 16\n",
+    "\n",
+    "    if(cantidad_de_jugadores > len(B) or cantidad_de_jugadores > max_jugadores):\n",
+    "        return False\n",
+    "\n",
+    "    satisface_Bi = [False] * len(B)\n",
+    "\n",
+    "    for c in C:                      # O(#C) \n",
+    "        for i in range(len(B)):\n",
+    "            if c in B[i]:            # O(#B[i])\n",
+    "                satisface_Bi[i] = True\n",
+    "\n",
+    "    return all(satisface_Bi)      # O(#B)         "
+   ]
   }
  ],
  "metadata": {
