agrego chequeo solucion para los sets de la catedra

--- a/TP3/TP3.ipynb
+++ b/TP3/TP3.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,37 +82,47 @@
     "path_75 = 'sets de la catedra/75.txt'\n",
     "path_100 = 'sets de la catedra/100.txt'\n",
     "path_200 = 'sets de la catedra/200.txt'\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "resultados_sets_catedra = 'sets de la catedra/Resultados Esperados.txt'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Me guardo los resultados esperados, dados por la cátedra\n",
     "class Resultado:\n",
-    "    def __init__(self, cantidad_minima, jugadores):\n",
+    "    def __init__(self, nombre_archivo, cantidad_minima, jugadores):\n",
+    "        self.nombre_archivo = nombre_archivo\n",
     "        self.cantidad_minima = cantidad_minima\n",
     "        self.jugadores = jugadores\n",
     "\n",
     "def obtener_resultados_esperados(nombre_archivo):\n",
-    "    with open(nombre_archivo, 'r') as file:\n",
-    "        lineas = file.readlines()\n",
-    "        resultados = []\n",
+    "    with open(nombre_archivo, 'r') as archivo:\n",
+    "        contenido = archivo.read() \n",
+    "    resultados = []\n",
     "\n",
+    "    # Separa el contenido en bloques\n",
+    "    bloques = contenido.split('\\n\\n')\n",
+    "    \n",
+    "    # Itera a través de cada bloque y busca \"Ganancia maxima\" y \"Plan de entrenamiento\" dentro de cada uno\n",
+    "    for bloque in bloques:\n",
+    "        nombre_archivo = ''\n",
+    "        cantidad_minima = 0\n",
+    "        jugadores = []\n",
+    "\n",
+    "        lineas = bloque.split('\\n')\n",
     "        for linea in lineas:\n",
-    "            if \"Cantidad\" in linea:\n",
+    "            if \".txt\" in linea:\n",
+    "                nombre_archivo = linea\n",
+    "            if 'Cantidad' in linea:\n",
     "                cantidad_minima = int(linea.split(\":\")[1].split(\"(\")[0].strip())\n",
     "                jugadores_linea = linea.split(\"(\")[1].split(\")\")[0]\n",
     "                jugadores = [jugador.strip() for jugador in jugadores_linea.split(\",\")]\n",
-    "                resultados.append(Resultado(cantidad_minima, jugadores))\n",
+    "                resultados.append(Resultado(nombre_archivo, cantidad_minima, jugadores))\n",
     "\n",
-    "        return resultados\n"
+    "    return resultados\n"
    ]
   },
   {
@@ -124,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -196,10 +206,86 @@
     "archivo_path = path_7\n",
     "pedidos_de_la_prensa, preseleccion = obtener_preseleccion_y_pedidos_de_la_prensa(archivo_path)\n",
     "solucion = solucion_para_Scaloni(preseleccion, pedidos_de_la_prensa)\n",
-    "print(solucion)\n",
+    "print(solucion)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Chequeo solución \n",
     "\n",
-    "\n",
-    "\n"
+    "##### 1 - Usando sets de la cátedra"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# correr pip install tabulate en consola para poder usar esta libreria \n",
+    "from tabulate import tabulate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pedidos_de_la_prensa_5, preseleccion_5 = obtener_preseleccion_y_pedidos_de_la_prensa(path_5)\n",
+    "solucion_5 = solucion_para_Scaloni(preseleccion_5, pedidos_de_la_prensa_5)\n",
+    "pedidos_de_la_prensa_7, preseleccion_7 = obtener_preseleccion_y_pedidos_de_la_prensa(path_7)\n",
+    "solucion_7 = solucion_para_Scaloni(preseleccion_7, pedidos_de_la_prensa_7)\n",
+    "pedidos_de_la_prensa_10_pocos, preseleccion_10_pocos = obtener_preseleccion_y_pedidos_de_la_prensa(path_10_pocos)\n",
+    "solucion_10_pocos = solucion_para_Scaloni(preseleccion_10_pocos, pedidos_de_la_prensa_10_pocos)\n",
+    "pedidos_de_la_prensa_10_varios, preseleccion_10_varios = obtener_preseleccion_y_pedidos_de_la_prensa(path_10_varios)\n",
+    "solucion_10_varios = solucion_para_Scaloni(preseleccion_10_varios, pedidos_de_la_prensa_10_varios)\n",
+    "pedidos_de_la_prensa_10_todos, preseleccion_10_todos = obtener_preseleccion_y_pedidos_de_la_prensa(path_10_todos)\n",
+    "solucion_10_todos = solucion_para_Scaloni(preseleccion_10_todos, pedidos_de_la_prensa_10_todos)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resultados_esperados = obtener_resultados_esperados(resultados_sets_catedra)[:5]\n",
+    "pedidos_de_la_prensa = [pedidos_de_la_prensa_5, pedidos_de_la_prensa_7, pedidos_de_la_prensa_10_pocos,\\\n",
+    "                        pedidos_de_la_prensa_10_varios, pedidos_de_la_prensa_10_todos]\n",
+    "resultados_obtenidos = [solucion_5, solucion_7, solucion_10_pocos,solucion_10_varios, solucion_10_todos]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Archivo          Cantidad mínima esperada    Cantidad mínima obtenida  Se obtuvo el resultado esperado?\n",
+      "-------------  --------------------------  --------------------------  ----------------------------------\n",
+      "5.txt                                   2                           2  Sí\n",
+      "7.txt                                   2                           2  Sí\n",
+      "10_pocos.txt                            3                           3  Sí\n",
+      "10_varios.txt                           6                           6  Sí\n",
+      "10_todos.txt                           10                          10  Sí\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Imprime los resultados obtenidos y los esperados en una tabla\n",
+    "resultados = []\n",
+    "i = 0\n",
+    "for resultado_esperado in resultados_esperados:\n",
+    "  es_correcto = \"Sí\" if resultado_esperado.cantidad_minima == len(resultados_obtenidos[i]) and verificar_solucion_para_Scaloni(pedidos_de_la_prensa[i], resultados_obtenidos[i]) else \"No\"\n",
+    "  resultados.append([resultado_esperado.nombre_archivo, resultado_esperado.cantidad_minima, len(resultados_obtenidos[i]), es_correcto]) \n",
+    "  i += 1\n",
+    "print(tabulate(resultados, headers=['Archivo', 'Cantidad mínima esperada', 'Cantidad mínima obtenida', 'Se obtuvo el resultado esperado?']))"
    ]
   }
  ],
@@ -219,7 +305,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
