genero archivos de prueba + verifico solucion

--- a/TP3/TP3.ipynb
+++ b/TP3/TP3.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,12 +36,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Funciones auxiliares\n"
+    "### Funciones auxiliares\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,27 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Paths de los archivos a utilizar\n",
-    "path_5 = 'sets de la catedra/5.txt'\n",
-    "path_7 = 'sets de la catedra/7.txt'\n",
-    "path_10_pocos = 'sets de la catedra/10_pocos.txt'\n",
-    "path_10_todos = 'sets de la catedra/10_todos.txt'\n",
-    "path_10_varios = 'sets de la catedra/10_varios.txt'\n",
-    "path_15 = 'sets de la catedra/15.txt'\n",
-    "path_20 = 'sets de la catedra/20.txt'\n",
-    "path_75 = 'sets de la catedra/75.txt'\n",
-    "path_100 = 'sets de la catedra/100.txt'\n",
-    "path_200 = 'sets de la catedra/200.txt'\n",
-    "resultados_sets_catedra = 'sets de la catedra/Resultados Esperados.txt'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,12 +109,95 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Función verificadora"
+    "### Sets de datos"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Paths de los archivos de la catedra\n",
+    "path_5 = 'sets/sets de la catedra/5.txt'\n",
+    "path_7 = 'sets/sets de la catedra/7.txt'\n",
+    "path_10_pocos = 'sets/sets de la catedra/10_pocos.txt'\n",
+    "path_10_todos = 'sets/sets de la catedra/10_todos.txt'\n",
+    "path_10_varios = 'sets/sets de la catedra/10_varios.txt'\n",
+    "path_15 = 'sets/sets de la catedra/15.txt'\n",
+    "path_20 = 'sets/sets de la catedra/20.txt'\n",
+    "path_75 = 'sets/sets de la catedra/75.txt'\n",
+    "path_100 = 'sets/sets de la catedra/100.txt'\n",
+    "path_200 = 'sets/sets de la catedra/200.txt'\n",
+    "resultados_sets_catedra = 'sets/sets de la catedra/Resultados Esperados.txt'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Creación sets de datos propios"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "\n",
+    "random.seed(0)\n",
+    "\n",
+    "pedidos_de_prensa_max, _ = obtener_preseleccion_y_pedidos_de_la_prensa(path_200)\n",
+    "universe = list(set([pedido for pedidos in pedidos_de_prensa_max for pedido in pedidos]))\n",
+    "\n",
+    "def generar_instancia(universe_size, num_sets, max_set_size):\n",
+    "    sets = [{universe[random.randint(1, universe_size)] for _ in range(random.randint(1, max_set_size))} for _ in range(num_sets)]\n",
+    "    return sets\n",
+    "\n",
+    "sets_5 = generar_instancia(30, 5, 6)\n",
+    "sets_15 = generar_instancia(30, 15, 15)\n",
+    "sets_15_un_elemento = generar_instancia(30, 15, 1)\n",
+    "sets_20 = generar_instancia(30, 20, 6)\n",
+    "sets_50 = generar_instancia(30, 50, 2)\n",
+    "\n",
+    "def crear_archivos(sets, nombre_archivo):\n",
+    "    with open(nombre_archivo, 'w') as archivo:\n",
+    "        for set in sets:\n",
+    "            archivo.write(','.join(set) + '\\n')\n",
+    "\n",
+    "crear_archivos(sets_5, 'sets/nuestros/5.txt')\n",
+    "crear_archivos(sets_15, 'sets/nuestros/15.txt')\n",
+    "crear_archivos(sets_15_un_elemento, 'sets/nuestros/15_un_elemento.txt')\n",
+    "crear_archivos(sets_20, 'sets/nuestros/20.txt')\n",
+    "crear_archivos(sets_50, 'sets/nuestros/50.txt')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Paths de los archivos nuestros\n",
+    "path_5_nuestro = 'sets/nuestros/5.txt'\n",
+    "path_15_nuestro = 'sets/nuestros/15.txt'\n",
+    "path_15_un_elemento_nuestro = 'sets/nuestros/15_un_elemento.txt'\n",
+    "path_20_nuestro = 'sets/nuestros/20.txt'\n",
+    "path_50_nuestro = 'sets/nuestros/50.txt'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Función verificadora"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,35 +225,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Mauro Zarate', 'Pezzella']\n"
+      "['Colidio', \"Barcon't\"]\n"
      ]
     }
    ],
    "source": [
-    "def actualizar_solucion(solucion_actual, solucion):\n",
-    "    if len(solucion_actual) < len(solucion) or len(solucion) == 0:\n",
-    "        solucion[:] = solucion_actual\n",
-    "\n",
-    "\n",
-    "def conjunto_minimo_para_Scaloni(preseleccion, solucion_actual, pedidos_de_prensa, indice, solucion):\n",
+    "def conjunto_minimo_para_Scaloni(preseleccion, solucion_actual, pedidos_de_prensa, indice, solucion, max_jugadores):\n",
     "    cantidad_de_jugadores = len(solucion_actual)\n",
-    "    max_jugadores = 16\n",
-    "\n",
+    "    \n",
     "    if(cantidad_de_jugadores >= len(pedidos_de_prensa) or cantidad_de_jugadores >= max_jugadores):\n",
     "        return \n",
     "    \n",
     "    for i in range(indice, (len(preseleccion)-1)):\n",
     "        solucion_actual.append(preseleccion[(i)])\n",
     "        if verificar_solucion_para_Scaloni(pedidos_de_prensa, solucion_actual):\n",
-    "            actualizar_solucion(solucion_actual, solucion)\n",
-    "        conjunto_minimo_para_Scaloni(preseleccion, solucion_actual, pedidos_de_prensa, i + 1, solucion)\n",
+    "            if len(solucion_actual) < len(solucion) or len(solucion) == 0:\n",
+    "                solucion[:] = solucion_actual\n",
+    "        conjunto_minimo_para_Scaloni(preseleccion, solucion_actual, pedidos_de_prensa, i + 1, solucion, max_jugadores)\n",
     "        solucion_actual.remove(solucion_actual[len(solucion_actual) - 1])\n",
     "\n",
     "\n",
@@ -198,7 +256,8 @@
     "def solucion_para_Scaloni(preseleccion, pedidos_de_prensa):\n",
     "    solucion = []\n",
     "    solucion_actual = []\n",
-    "    conjunto_minimo_para_Scaloni(preseleccion, solucion_actual, pedidos_de_prensa, 0, solucion)\n",
+    "    max_jugadores = len(set([pedido for pedidos in pedidos_de_prensa for pedido in pedidos])) # ver complejidad\n",
+    "    conjunto_minimo_para_Scaloni(preseleccion, solucion_actual, pedidos_de_prensa, 0, solucion, max_jugadores)\n",
     "    return solucion\n",
     "\n",
     "\n",
@@ -220,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -286,6 +345,69 @@
     "  resultados.append([resultado_esperado.nombre_archivo, resultado_esperado.cantidad_minima, len(resultados_obtenidos[i]), es_correcto]) \n",
     "  i += 1\n",
     "print(tabulate(resultados, headers=['Archivo', 'Cantidad mínima esperada', 'Cantidad mínima obtenida', 'Se obtuvo el resultado esperado?']))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 1 - Usando sets propios"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pedidos_de_la_prensa_5_nuestro, preseleccion_5_nuestro = obtener_preseleccion_y_pedidos_de_la_prensa(path_5_nuestro)\n",
+    "solucion_5_nuestro = solucion_para_Scaloni(preseleccion_5_nuestro, pedidos_de_la_prensa_5_nuestro)\n",
+    "pedidos_de_la_prensa_15_nuestro, preseleccion_15_nuestro = obtener_preseleccion_y_pedidos_de_la_prensa(path_15_nuestro)\n",
+    "solucion_15_nuestro = solucion_para_Scaloni(preseleccion_15_nuestro, pedidos_de_la_prensa_15_nuestro)\n",
+    "pedidos_de_la_prensa_15_un_elemento_nuestro, preseleccion_15_un_elemento_nuestro = obtener_preseleccion_y_pedidos_de_la_prensa(path_15_un_elemento_nuestro)\n",
+    "solucion_15_un_elemento_nuestro = solucion_para_Scaloni(preseleccion_15_un_elemento_nuestro, pedidos_de_la_prensa_15_un_elemento_nuestro)\n",
+    "pedidos_de_la_prensa_20_nuestro, preseleccion_20_nuestro = obtener_preseleccion_y_pedidos_de_la_prensa(path_20_nuestro)\n",
+    "solucion_20_nuestro = solucion_para_Scaloni(preseleccion_20_nuestro, pedidos_de_la_prensa_20_nuestro)\n",
+    "pedidos_de_la_prensa_50_nuestro, preseleccion_50_nuestro = obtener_preseleccion_y_pedidos_de_la_prensa(path_50_nuestro)\n",
+    "solucion_50_nuestro = solucion_para_Scaloni(preseleccion_50_nuestro, pedidos_de_la_prensa_50_nuestro)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pedidos_de_la_prensa_nuestro = [pedidos_de_la_prensa_5_nuestro, pedidos_de_la_prensa_15_nuestro, pedidos_de_la_prensa_15_un_elemento_nuestro,\\\n",
+    "                                pedidos_de_la_prensa_20_nuestro, pedidos_de_la_prensa_50_nuestro]\n",
+    "resultados_obtenidos_nuestros = [solucion_5_nuestro, solucion_15_nuestro, solucion_15_un_elemento_nuestro, solucion_20_nuestro, solucion_50_nuestro]\n",
+    "archivos = ['5.txt', '15.txt', '15_un_elemento.txt', '20.txt', '50.txt']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Archivo      Cantidad minima obtenida  Es válida la soliución?\n",
+      "---------  --------------------------  -------------------------\n",
+      "5.txt                               3  Sí\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Imprime los resultados obtenidos y los esperados en una tabla\n",
+    "resultados = []\n",
+    "i = 0\n",
+    "for resultado_obtenido in resultados_obtenidos_nuestros:\n",
+    "  es_correcto = \"Sí\" if verificar_solucion_para_Scaloni(pedidos_de_la_prensa_nuestro[i], resultado_obtenido) else \"No\"\n",
+    "  resultados.append([archivos[i], len(resultado_obtenido), es_correcto]) \n",
+    "  i += 1\n",
+    "print(tabulate(resultados, headers=['Archivo', 'Cantidad minima obtenida', 'Es válida la soliución?']))"
    ]
   }
  ],
